fix: Adjust z-index and height in Banner.css for improved layout responsiveness

--- a/src/components/Banner.css
+++ b/src/components/Banner.css
@@ -54,7 +54,7 @@
 .movie-banner .content {
     max-width: 100%;
     position: relative;
-    z-index: 9999;
+    z-index: 999;
     transform: scale(1);
     color: #fff;
     padding: 0 8px;
@@ -94,10 +94,7 @@
     margin-top: 13px;
 }
 
-@media screen and (max-width: 768px) {
-    .banner {
-        min-height: 80dvh;
-    }
+@media screen and (max-width: 1024px) {
 
     .banner .movie-banner {
         padding: 0 20px;
@@ -109,7 +106,7 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
-        height: 100%;
+        height: 70vh;
         gap: 20px;
     }
 
@@ -117,7 +114,14 @@
         font-size: 2rem;
     }
 
-    .movie-banner p {
+    .movie-banner .content p {
         font-size: 1rem;
+        max-width: 60%;
+    }
+}
+
+@media screen and (max-width: 450px) {
+    .movie-banner .content p {
+        max-width: 80%;
     }
 }
